--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -37,3 +37,35 @@ tail(litters_df)
 skimr::skim(litters_df)
 ```
 
+
+## Options to read_csv
+```{r}
+litters_df = read_csv("./data/FAS_litters.csv", skip = 10, col_names = FALSE)
+```
+
+
+```{r}
+litters_df = read_csv("./data/FAS_litters.csv", na = c("", "NA",".",999)
+```
+
+check out '?read_csv()' for more information.
+
+## Other file formats
+
+Read in an excel file.
+
+```{r}
+library(readxl)
+mlb_df = read_excel("./data/mlb11.xlsx",range = "A1:F7")
+mlb_df
+```
+
+Read in a SAS file.
+
+```{r}
+library(haven)
+pulse_df = read_sas("./data/public_pulse_data.sas7bdat")
+pulse_df
+```
+
+
